[package]
name = "luhn-leptos"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.15", features = ["csr", "nightly"] }
rand = "0.8.5"



[dev-dependencies]
criterion = "0.3"
rand = "0.8"

[features]
# Define a feature for benchmarking
bench = ["criterion", "rand"]

[[bench]]
name = "luhn_benchmark"
harness = false
required-features = ["bench"]